i18n: live EN retranslation at startup; MixPanel retranslate; recalc always updates sigma/k; README v1.7; build notes

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -6,7 +6,12 @@
   "reportMissingTypeArgument": true,
   "reportIncompatibleMethodOverride": true,
   "reportOptionalMemberAccess": true,
+  "exclude": [
+    "i18n"
+  ],
   "executionEnvironments": [
-    { "root": "." }
+    {
+      "root": "."
+    }
   ]
 }
