feat(release): bump to v1.8, README and analysis export updates; build EXE; add release notes & dev requirements

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
-# Byte-compiled / optimized / DLL files
+.venv/
+__pycache__/
+*.pyc
+dist/
+build/
+logs/
+.VSCodeCounter/
+.pytest_cache/
+.mypy_cache/
+*.spec.bak# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
